--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,31 +12,31 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/Users/Graham/Dev/Github/IOT_Lib/.pio/build/esp32-s3-devkitc/firmware.elf",
-            "projectEnvName": "esp32-s3-devkitc",
-            "toolchainBinDir": "C:/Users/Graham/.platformio/packages/toolchain-xtensa-esp32s3/bin",
+            "executable": "C:/Users/Graham/Dev/Github/IOT_Lib/.pio/build/esp32/firmware.elf",
+            "projectEnvName": "esp32",
+            "toolchainBinDir": "C:/Users/Graham/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug (esp32-s3-devkitc)"
+                "task": "Pre-Debug"
             }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/Users/Graham/Dev/Github/IOT_Lib/.pio/build/esp32-s3-devkitc/firmware.elf",
-            "projectEnvName": "esp32-s3-devkitc",
-            "toolchainBinDir": "C:/Users/Graham/.platformio/packages/toolchain-xtensa-esp32s3/bin",
+            "executable": "C:/Users/Graham/Dev/Github/IOT_Lib/.pio/build/esp32/firmware.elf",
+            "projectEnvName": "esp32",
+            "toolchainBinDir": "C:/Users/Graham/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/Users/Graham/Dev/Github/IOT_Lib/.pio/build/esp32-s3-devkitc/firmware.elf",
-            "projectEnvName": "esp32-s3-devkitc",
-            "toolchainBinDir": "C:/Users/Graham/.platformio/packages/toolchain-xtensa-esp32s3/bin",
+            "executable": "C:/Users/Graham/Dev/Github/IOT_Lib/.pio/build/esp32/firmware.elf",
+            "projectEnvName": "esp32",
+            "toolchainBinDir": "C:/Users/Graham/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
