Moved webserver code into library, added examples

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,7 @@
 [platformio]
-default_envs = esp32
-src_dir = src
-include_dir = src/include
-boards_dir = boards
+default_envs = minimal
+lib_dir = .
+src_dir = examples
 
 [common]
     lib_deps_external =
@@ -13,25 +12,60 @@ boards_dir = boards
         -std=gnu++17
         -D APP_VERSION=\"V1.0.0\"
         -D TAG=\"IOT\"
-        -I src/include
         -I data
 
     build_unflags =
         -std=gnu++11
 
-[env:esp32]
+[env:minimal]
 platform = espressif32
 board = esp32dev
 framework = arduino
-
+monitor_speed = 115200
+build_src_filter = +<minimal> 
 ; Only used for tests, not for building the library
-test_ignore = test_native
+; test_ignore = test_native
 
 lib_ldf_mode = deep+
 lib_compat_mode = strict
 
 build_flags =
     ${common.build_flags}
+    -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+    -D LOG_TO_SERIAL_PORT
+    -D Has_Display
+    -D WIFI_STATUS_PIN
+
+build_unflags =
+    ${common.build_unflags}
+
+lib_deps =
+    ${common.lib_deps_external}
+
+[env:mqtt-modbus]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<mqtt-modbus> 
+; Only used for tests, not for building the library
+; test_ignore = test_native
+
+lib_ldf_mode = deep+
+lib_compat_mode = strict
+
+build_flags =
+    ${common.build_flags}
+    -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+    -D LOG_TO_SERIAL_PORT
+    -D Has_Display
+    -D HasOTA
+    -D HasMQTT
+    -D HasModbus
+    -D HasCoils
+    -D HasInputRegisters
+    -D HasDiscretes
+    -D HoldingRegisters
 
 build_unflags =
     ${common.build_unflags}
