--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,7 @@ build_flags =
     -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
     -D LOG_TO_SERIAL_PORT
     -D Has_Display
-    -D WIFI_STATUS_PIN
+    -D WIFI_STATUS_PIN=2
 
 build_unflags =
     ${common.build_unflags}
@@ -59,6 +59,7 @@ build_flags =
     -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
     -D LOG_TO_SERIAL_PORT
     -D Has_Display
+    -D WIFI_STATUS_PIN=2
     -D HasOTA
     -D HasMQTT
     -D HasModbus
@@ -72,3 +73,4 @@ build_unflags =
 
 lib_deps =
     ${common.lib_deps_external}
+    miq19/eModbus @ ^1.7.4
