--- a/platformio.ini
+++ b/platformio.ini
@@ -63,10 +63,10 @@ build_flags =
     -D HasOTA
     -D HasMQTT
     -D HasModbus
-    -D HasCoils
+    ; -D HasCoils
     -D HasInputRegisters
-    -D HasDiscretes
-    -D HoldingRegisters
+    ; -D HasDiscretes
+    ; -D HoldingRegisters
 
 build_unflags =
     ${common.build_unflags}
