--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@ src_dir = examples
     build_flags =
         -std=gnu++17
         -D APP_VERSION=\"V1.0.0\"
-        -D TAG=\"IOT\"
+        -D LOG_TAG=\"IOT\"
 
     build_unflags =
         -std=gnu++11
