--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+sdkconfig.all-networks
+sdkconfig.lte-networks
+examples/CMakeLists.txt
+/managed_components
+dependencies.lock
+sdkconfig.lte-network
