Rolled back last commit

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
 [platformio]
 default_envs = minimal
-boards_dir = boards
-src_dir = examples/lte-network
+lib_dir = .
+src_dir = examples
 
 [common]
     lib_deps_external =
@@ -21,8 +21,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-custom_src_dir = examples/minimal/src
-extra_scripts = pre:scripts/set_src_dir.py
+build_src_filter = +<minimal> 
+; Only used for tests, not for building the library
+; test_ignore = test_native
 
 lib_ldf_mode = deep+
 lib_compat_mode = strict
@@ -45,8 +46,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-custom_src_dir = examples/mqtt-modbus/src
-extra_scripts = pre:scripts/set_src_dir.py
+build_src_filter = +<mqtt-modbus> 
+; Only used for tests, not for building the library
+; test_ignore = test_native
 
 lib_ldf_mode = deep+
 lib_compat_mode = strict
@@ -71,40 +73,3 @@ build_unflags =
 lib_deps =
     ${common.lib_deps_external}
     miq19/eModbus @ ^1.7.4
-
-[env:lte-network]
-platform = espressif32
-board = esp32dev
-framework = arduino, espidf
-monitor_speed = 115200
-; ESP-IDF expects a "main" folder
-; custom_src_dir = examples/lte-network/main
-; extra_scripts = pre:scripts/set_src_dir.py
-board_build.extra_components_dirs = components
-
-; Only used for tests, not for building the library
-; test_ignore = test_native
-
-lib_ldf_mode = deep+
-lib_compat_mode = strict
-
-build_flags =
-    ${common.build_flags}
-    -D APP_LOG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-    -D LOG_TO_SERIAL_PORT
-    -D Has_Display
-    -D WIFI_STATUS_PIN=12
-    -D HasOTA
-
-    -D HasLTE
-    ; A7670G LTE Modem pins
-    -D LTE_AIRPLANE_MODE=16
-    -D LTE_PWR_EN=21
-    -D LTE_TXD=48
-    -D LTE_RXD=47
-
-build_unflags =
-    ${common.build_unflags}
-
-lib_deps =
-    ${common.lib_deps_external}
